tests/fail/inherent_restriction.tk
shape Data(
    x: i32,
    y$: i32
)

fn foo(a$: i32) { // EXPECT: error[E0406]:
}

fn main() -> i32 {
    auto d# = Data(x=1, y=2)
    auto v = (^d#).x // EXPECT: error[E0406]:
    d#.y = 20 // EXPECT: error[E0443]:
    
    auto z$ = 10 // EXPECT: error[E0406]:
    
    return 0
}
